# pedestrian-detection

./: .gitignore  CMakeLists.txt  README.md  score.py
app/: main.cpp
dataset/labels/: frame_0001.txt  frame_0002.txt  frame_0003.txt  frame_0004.txt  frame_0006.txt  frame_0011.txt  frame_0012.txt  frame_0015.txt  frame_0016.txt  frame_0017.txt  frame_0019.txt  frame_0020.txt  frame_0021.txt  frame_0022.txt  frame_0023.txt  frame_0025.txt  frame_0028.txt  frame_0030.txt  frame_0032.txt  frame_0034.txt  frame_0035.txt  frame_0036.txt  frame_0037.txt  frame_0042.txt  frame_0044.txt  frame_0046.txt  frame_0050.txt  frame_0051.txt  frame_0052.txt  frame_0053.txt  frame_0054.txt  frame_0055.txt  frame_0066.txt  frame_0067.txt  frame_0073.txt  frame_0075.txt  frame_0076.txt  frame_0083.txt  frame_0084.txt  frame_0085.txt  (+18 more)
src/pedestrian/: PedestrianDetector.cpp  PedestrianDetector.h
